--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "@babel/preset-env": "^7.24.6",
     "@types/jest": "^29.5.12",
     "babel-jest": "^29.7.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "supertest": "^6.2.4"
   },
   "dependencies": {
     "express": "^4.18.1",
