--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "supertest": "^6.2.4"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
     "winston": "^3.13.0",
     "winston-daily-rotate-file": "^5.0.0"
