--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "mustache-express": "^1.3.2",
     "winston": "^3.13.0",
     "winston-daily-rotate-file": "^5.0.0"
